Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129092

"OpenType support missing for..." Qt warnings

XMLWordPrintable

    • macOS, Windows
    • 0c7a89f55 (dev), 6a2035d97 (6.8), cd6608e88 (dev), 8d83abfaf (6.8), 31cc8bc4a (tqtc/lts-6.5)

      There are Qt warnings which I regularly observe in users' reports on our automated tracking system, since we are processing almost all Qt warning messages via our custom message handler:

      Windows:

      OpenType support missing for "Segoe UI", script 10
      
      OpenType support missing for "Arial", script 10
      
      OpenType support missing for "Segoe UI Emoji", script 10
      
      OpenType support missing for "Tahoma", script 10
      
      OpenType support missing for "noto sans myanmar", script 10
      
      OpenType support missing for "SimSun", script 15
      
      OpenType support missing for "Arial Unicode MS", script 15
      

      macOS:

      OpenType support missing for "noto sans myanmar", script 11
      
      OpenType support missing for ".AppleSystemUIFont", script 11
      

      They are a bit annoying and don't seem very useful, so I suggest at least lowering their severity to QtDebugMsg and/or making them categorized.

        1. screenshot-1.png
          244 kB
          Vladimir Belyavsky
        For Gerrit Dashboard: QTBUG-129092
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes