src/gui/text/qfontdatabase.cpp
@@ -733,8 +733,8 @@ QFontEngine *QFontDatabasePrivate::loadSingleEngine(int script,
             if (engine) {
                 // Also check for OpenType tables when using complex scripts
                 if (Q_UNLIKELY(!engine->supportsScript(QChar::Script(script)))) {
-                    qWarning("  OpenType support missing for \"%s\", script %d",
-                             qPrintable(def.families.constFirst()), script);
+                    qCWarning(lcFontDb, "OpenType support missing for \"%ls\", script %d",
+                             qUtf16Printable(def.families.constFirst()), script);
                     return nullptr;
                 }
 
@@ -758,8 +758,8 @@ QFontEngine *QFontDatabasePrivate::loadSingleEngine(int script,
         if (engine) {
             // Also check for OpenType tables when using complex scripts
             if (!engine->supportsScript(QChar::Script(script))) {
-                qWarning("  OpenType support missing for \"%s\", script %d",
-                         +qPrintable(def.families.constFirst()), script);
+                qCWarning(lcFontDb, "OpenType support missing for \"%ls\", script %d",
+                         qUtf16Printable(def.families.constFirst()), script);
                 if (engine->ref.loadRelaxed() == 0)
                     delete engine;
                 return nullptr;
